# template-next-rust-monorepo

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/server/: .env  Cargo.toml  package.json
apps/server/src/: config.rs  lib.rs  main.rs
apps/server/src/http/: error.rs  mod.rs
apps/server/src/http/routes/: health_check.rs  mod.rs
apps/www/: pnpm-lock.yaml
