[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.67"
async-trait = "0.1.60"
axum = "0.6.1"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["env", "derive"] }
diesel = { version = "2.0.2", features = ["postgres", "uuid", "serde_json", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
headers = "0.3.8"
oauth2 = "4.3.0"
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = { version = "1.0.90", features = ["raw_value"] }
serde_with = "2.1.0"
sqlx = { version = "0.6.2", features = ["json", "tls", "uuid", "chrono", "runtime-tokio-native-tls", "postgres", "time"] }
thiserror = "1.0.38"
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.5", features = ["tokio", "trace", "uuid", "request-id", "limit"] }
tower-request-id = "0.2.0"
tower_governor = { version = "0.0.4", features = ["tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.2.2"
validator = "0.16.0"
